# 39InkIsle-2

./: .env.example  .gitignore  Makefile  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_book_metadata_table.py  003_add_reviews_collections_metadata_cache.py
backend/app/: config.py  main.py
backend/app/admin/: models.py  router.py  schemas.py  service.py
backend/app/auth/: dependencies.py  jwt.py  router.py  schemas.py  service.py
backend/app/books/: metadata_models.py  metadata_schemas.py  metadata_service.py  models.py  router.py  schemas.py  service.py
backend/app/collections/: models.py  router.py  schemas.py  service.py
backend/app/core/: exceptions.py  pagination.py  security.py
backend/app/db/: base.py  session.py
backend/app/enrichment/: comicvine.py  google_books.py  models.py  rate_limiter.py  router.py  schemas.py  service.py
backend/app/importer/: models.py  router.py  scanner.py  schemas.py  service.py  tasks.py
backend/app/opds/: auth.py  router.py  templates.py
backend/app/reader/: cbz_service.py  models.py  pdf_service.py  router.py  schemas.py  service.py
backend/app/reviews/: models.py  router.py  schemas.py  service.py
backend/app/tasks/: cache_cleanup.py  thumbnails.py  worker.py
backend/app/users/: models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py
backend/tests/benchmarks/: locustfile.py
backend/tests/test_auth/: test_auth.py  test_permissions.py
backend/tests/test_books/: test_books.py
(+53 files in other folders)
